--- a/templates/index.html
+++ b/templates/index.html
@@ -37,12 +37,13 @@
             </div>
             <div class="form-group">
                 <label for="smoking_history">Smoking History:</label>
-                <select id="smoking_history" name="smoking_history" required>
+                <select id="smoking_history" name="smoking_history" required        >
                     <option value="never">Never</option>
                     <option value="past">Past</option>
                     <option value="current">Current</option>
                     <option value="No Info">No Info</option>
                 </select>
+                </div>
             <div class="form-group">
                 <label for="bmi">BMI:</label>
                 <input type="number" id="bmi" name="bmi" required min="7" max="85" step="0.01"/>
