--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,14 @@
                 <label for="age">Age:</label>
                 <input type="number" id="age" name="age" required min="1" max="110"/>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="gender">Gender:</label>
                 <select id="gender" name="gender" required>
                     <option value="Male">Male</option>
                     <option value="Female">Female</option>
                 </select>
-            </div>
-            <div class="form-group">
+            </div> -->
+            <!-- <div class="form-group">
                 <label for="hypertension">Hypertension:</label>
                 <select id="hypertension" name="hypertension" required>
                     <option value="0">No</option>
@@ -34,8 +34,8 @@
                     <option value="0">No</option>
                     <option value="1">Yes</option>
                 </select>
-            </div>
-            <div class="form-group">
+            </div> -->
+            <!-- <div class="form-group">
                 <label for="smoking_history">Smoking History:</label>
                 <select id="smoking_history" name="smoking_history" required        >
                     <option value="never">Never</option>
@@ -43,7 +43,7 @@
                     <option value="current">Current</option>
                     <option value="No Info">No Info</option>
                 </select>
-                </div>
+                </div> -->
             <div class="form-group">
                 <label for="bmi">BMI:</label>
                 <input type="number" id="bmi" name="bmi" required min="7" max="85" step="0.01"/>
