--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diabetes prediction</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css?v=1') }}">  <!-- Optional CSS file -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">  <!-- Optional CSS file -->
 </head>
 <body>
     <div class="container">
